@startuml DeviceStatusManager
skinparam classAttributeIconSize 0

class DeviceStatusManager <<object>> {
  - _deviceStatusMap : MutableStateFlow<Map<String, Boolean>>
  - lastCheckedTimes : MutableMap<String, Long>
  - failureCountMap : MutableMap<String, Int>
  - appServer : AppServer?
  + initialize(server: AppServer)
  + updateDeviceStatus(ipAddress: String, isOnline: Boolean, verified: Boolean = false)
  + isDeviceOnline(ipAddress: String) : Boolean
  + verifyDeviceStatus(ipAddress: String)
  + handleNetworkDisconnect(ipAddress: String)
  + getOnlineDevices() : List<String>
  + clearAllStatuses()
  - updateConversations(ipAddress: String, isOnline: Boolean)
  - startPeriodicStatusChecks()
}

class AppServer {
  + checkDeviceReachable(addr: InetAddress) : Boolean
  + requestRemoteUserInfo(addr: InetAddress)
}

class GlobalApp {
  {static} GlobalUserRepo : GlobalUserRepo
}

class GlobalUserRepo {
  + userRepository : UserRepository
  + conversationRepository : ConversationRepository
}

class UserRepository {
  + getUserByIp(ip: String) : UserEntity?
}

class ConversationRepository {
  + updateUserStatus(userUuid: String, isOnline: Boolean, userAddress: String?)
}

class UserEntity

class InetAddress

DeviceStatusManager --> AppServer : uses
DeviceStatusManager ..> InetAddress : resolves/reachability
DeviceStatusManager ..> GlobalApp : reads static repo
GlobalApp --> GlobalUserRepo
GlobalUserRepo --> UserRepository
GlobalUserRepo --> ConversationRepository
UserRepository --> UserEntity
@enduml
